--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -34,6 +34,12 @@ jobs:
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli  
+
+      - name: Run Tests
+        run: npx ng test --no-watch --no-progress --code-coverage --browsers=ChromeHeadless 
+
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
