--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -19,13 +19,11 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm install  # Ganti npm ci jika ada masalah dependensi
-
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli  # Pastikan Angular CLI tersedia
+        run: npm ci  # Gunakan 'npm ci' agar instalasi lebih stabil
 
       - name: Run Tests
-        run: npm run test:ci
+        run: npm test -- --watch=false --coverage  # Sesuai dengan Jest/React Testing Library
+
   Deploy-Preview:
     needs: [Test]
     runs-on: ubuntu-latest
@@ -37,15 +35,3 @@ jobs:
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli  
-
-      - name: Run Tests
-        run: npx ng test --no-watch --no-progress --code-coverage --browsers=ChromeHeadless 
-
-      - name: Build Project Artifacts
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
