--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -12,23 +12,26 @@ jobs:
   Test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: Install dependencies
-        run: npm ci  # Gunakan 'npm ci' agar instalasi lebih stabil
+        run: npm ci  # Menggunakan 'npm ci' untuk instalasi yang lebih stabil
 
       - name: Run Tests
-        run: npm test -- --watch=false --coverage  # Sesuai dengan Jest/React Testing Library
+        run: npm run test:ci
 
   Deploy-Preview:
     needs: [Test]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
