--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18  # Sesuaikan dengan versi Node.js di proyekmu
+          node-version: 18  #
           cache: 'npm'
 
       - name: Install Dependencies
