--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ on:
       - "*"
 
 jobs:
-  build_and_deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18  #
+          node-version: 18
           cache: 'npm'
 
       - name: Install Dependencies
@@ -24,6 +24,26 @@ jobs:
 
       - name: Build Project
         run: npm run build
+
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-output
+          path: .vercel/output  # Sesuaikan dengan lokasi build yang dihasilkan
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build  # Menunggu build selesai sebelum deploy
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-output
+          path: .vercel/output  # Sesuaikan dengan lokasi build yang akan digunakan
 
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
